llmdocs/0.7/_sources/sdk/generated/deepchecks_llm_client.client.DeepchecksLLMClient.rst.txt

DeepchecksLLMClient
===================



.. currentmodule:: deepchecks_llm_client.client

.. autoclass:: DeepchecksLLMClient
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   DeepchecksLLMClient.api
   

   
   DeepchecksLLMClient.initialized
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   DeepchecksLLMClient.annotate
   
   
   DeepchecksLLMClient.app_name
   
   
   DeepchecksLLMClient.auto_collect
   
   
   DeepchecksLLMClient.env_type
   
   
   DeepchecksLLMClient.get_application_config
   
   
   DeepchecksLLMClient.golden_set
   
   
   DeepchecksLLMClient.golden_set_generation_completed
   
   
   DeepchecksLLMClient.golden_set_iterator
   
   
   DeepchecksLLMClient.init
   
   
   DeepchecksLLMClient.log_interaction
   
   
   DeepchecksLLMClient.set_tags
   
   
   DeepchecksLLMClient.update_application_config
   
   
   DeepchecksLLMClient.version_name
   






