llmdocs/0.12/_sources/sdk/generated/deepchecks_llm_client.client.DeepchecksLLMClient.rst.txt

DeepchecksLLMClient
===================



.. currentmodule:: deepchecks_llm_client.client

.. autoclass:: DeepchecksLLMClient
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   DeepchecksLLMClient.api
   

   
   DeepchecksLLMClient.app_name
   

   
   DeepchecksLLMClient.env_type
   

   
   DeepchecksLLMClient.initialized
   

   
   DeepchecksLLMClient.version_name
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   DeepchecksLLMClient.annotate
   
   
   DeepchecksLLMClient.auto_collect
   
   
   DeepchecksLLMClient.create_custom_property
   
   
   DeepchecksLLMClient.data_iterator
   
   
   DeepchecksLLMClient.delete_custom_property
   
   
   DeepchecksLLMClient.delete_interactions
   
   
   DeepchecksLLMClient.get_application_config
   
   
   DeepchecksLLMClient.get_custom_properties
   
   
   DeepchecksLLMClient.get_data
   
   
   DeepchecksLLMClient.get_pentest_prompts
   
   
   DeepchecksLLMClient.init
   
   
   DeepchecksLLMClient.log_batch_interactions
   
   
   DeepchecksLLMClient.log_interaction
   
   
   DeepchecksLLMClient.set_tags
   
   
   DeepchecksLLMClient.update_application_config
   
   
   DeepchecksLLMClient.update_custom_property
   
   
   DeepchecksLLMClient.update_interaction
   






